deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: foxhound-webserver
 name: foxhound-webserver
spec:
 replicas: 2
 selector:
   matchLabels:
     app: foxhound-webserver
 template:
   metadata:
     labels:
       app: foxhound-webserver
   spec:
     containers:
       - image: quay.io/akrohg/acm-demo:v1
         imagePullPolicy: Always
         name: foxhound-webserver
         ports:
           - containerPort: 8080
