service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: foxhound-web
  name: foxhound-web
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: foxhound-web
  sessionAffinity: None
  type: ClusterIP
