route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: foxhound-webserver
  name: foxhound-webserver
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: foxhound-webserver
    weight: 100
  wildcardPolicy: None
